fix(Container): add stretching to 100 percent width of parent

--- a/src/components/ui/Container/Container.module.scss
+++ b/src/components/ui/Container/Container.module.scss
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
   max-width: 73rem;
   margin: 0 auto;
 }
